# fdk-python-demo

./: .pre-commit-config.yaml  notes.txt  pyproject.toml
src/fdk_python_demo/: __init__.py
tests/: test_hello_world.py
