[tool.poetry]
name = "fdk-python-demo"
version = "0.1.0"
description = ""
authors = ["Björn Reetz <git@bjoern-reetz.de>"]
readme = "README.md"
packages = [{include = "fdk_python_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
